feat: add translations for vols and works
* chore: update api pkg

* refactor: adjust for api pkg changes

* feat: add translations

* fix: use new translation paths in works-menu store

* test: fix tests

* fix: fix works translation in paragraph-dialog

* feat: remove top padding of p-tree

* fix: add commas to KrV translations

* fix: fix choice between abbrev and title

* fix: fix lang change not being reflected in url

* test: add tests for language store

* chore: add names to workflow steps

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -84,5 +84,212 @@
     },
     "INTERNAL_SERVER_ERROR": "Interner Serverfehler.",
     "NOT_IMPLEMENTED": "Funktion nicht implementiert."
+  },
+
+  "SECTIONS": {
+    "SEC_1": "Abteilung I: Werke",
+    "SEC_2": "Abteilung II: Briefwechsel",
+    "SEC_3": "Abteilung III: Handschriftlicher Nachlass"
+  },
+  "VOLUMES": {
+    "VOL_1": "Vorkritische Schriften I: 1747-1756",
+    "VOL_2": "Vorkritische Schriften II: 1757-1777",
+    "VOL_3": "Kritik der reinen Vernunft (2. Aufl., 1787)",
+    "VOL_4": "Kritik der reinen Vernunft (1. Aufl., 1781), Prolegomena, Grundlegung zur Metaphysik der Sitten, Metaphysische Anfangsgründe der Naturwissenschaft",
+    "VOL_5": "Kritik der praktischen Vernunft, Kritik der Urteilskraft",
+    "VOL_6": "Die Religion innerhalb der Grenzen der blossen Vernunft, Die Metaphysik der Sitten",
+    "VOL_7": "Der Streit der Fakultäten, Anthropologie in pragmatischer Hinsicht",
+    "VOL_8": "Abhandlungen nach 1781",
+    "VOL_9": "Logik. Physische Geographie, Pädagogik",
+    "VOL_10": "Briefe, 1747-1788 (2. Aufl)",
+    "VOL_11": "Briefe, 1789-1794 (2. Aufl.)",
+    "VOL_12": "Briefe, 1795-1803, Anhang (2. Aufl.)",
+    "VOL_13": "Anmerkungen und Register",
+    "VOL_14": "Mathematik, Physik und Chemie, Physische Geographie",
+    "VOL_15": "Anthropologie",
+    "VOL_16": "Logik",
+    "VOL_17": "Metaphysik, 1. Theil",
+    "VOL_18": "Metaphysik, 2. Theil",
+    "VOL_19": "Moralphilosophie, Rechtsphilosophie und Religionsphilosophie",
+    "VOL_20": "Vorarbeiten und Nachträge, Einleitung und Erläuterungen",
+    "VOL_21": "Opus postumum (Convolut I bis VI)",
+    "VOL_22": "Opus postumum (Convolut VII bis XIII)",
+    "VOL_23": "Vorarbeiten und Nachträge, Einleitung und Erläuterungen"
+  },
+  "WORKS": {
+    "GSK": "Gedanken von der wahren Schätzung der lebendigen Kräfte und Beurtheilung der Beweise, deren sich Herr von Leibniz und andere Mechaniker in dieser Streitsache bedient haben, nebst einigen vorhergehenden Betrachtungen, welche die Kraft der Körper überhaupt betreffen",
+    "UFE": "Untersuchung der Frage, ob die Erde in ihrer Umdrehung um die Achse, wodurch sie die Abwechselung des Tages und der Nacht hervorbringt, einige Veränderung seit den ersten Zeiten ihres Ursprungs erlitten habe und woraus man sich ihrer versichern könne, welche von der Königl. Akademie der Wissenschaften zu Berlin zum Preise für das jetztlaufende Jahr aufgegeben worden",
+    "FE": "Die Frage, ob die Erde veralte, physikalisch erwogen",
+    "NTH": "Allgemeine Naturgeschichte und Theorie des Himmels oder Versuch von der Verfassung und dem mechanischen Ursprunge des ganzen Weltgebäudes, nach Newtonischen Grundsätzen abgehandelt",
+    "Di": "Meditationum quarundam de igne succincta delineatio",
+    "PND": "Principiorum primorum cognitionis metaphysicae nova dilucidatio",
+    "VUE": "Von den Ursachen der Erderschütterungen bei Gelegenheit des Unglücks, welches die westliche Länder von Europa gegen das Ende des vorigen Jahres betroffen hat",
+    "GNVE": "Geschichte und Naturbeschreibung der merkwürdigsten Vorfälle des Erdbebens, welches an dem Ende des 1755sten Jahres einen großen Theil der Erde erschüttert hat",
+    "FBZE": "Fortgesetzte Betrachtung der seit einiger Zeit wahrgenommenen Erderschütterungen",
+    "MON_PH": "Metaphysicae cum geometria iunctae usus in philosophia naturali, cuius specimen I. continet monadologiam physicam",
+    "TW": "Neue Anmerkungen zur Erläuterung der Theorie der Winde",
+    "INTRO_1": "Einleitung in die Abtheilung der Werke",
+
+    "EACG": "Entwurf und Ankündigung eines Collegii der physischen Geographie nebst dem Anhange einer kurzen Betrachtung über die Frage: Ob die Westwinde in unsern Gegenden darum feucht seien, weil sie über ein großes Meer streichen",
+    "NLBR": "Neuer Lehrbegriff der Bewegung und Ruhe und der damit verknüpften Folgerungen in den ersten Gründen der Naturwissenschaft",
+    "VBO": "Versuch einiger Betrachtungen über den Optimismus",
+    "GAJFF": "Gedanken bei dem frühzeitigen Ableben des Herrn Johann Friedrich von Funk",
+    "DFS": "Die falsche Spitzfindigkeit der vier syllogistischen Figuren erwiesen",
+    "BDG": "Der einzig mögliche Beweisgrund zu einer Demonstration des Daseins Gottes",
+    "NG": "Versuch den Begriff der negativen Größen in die Weltweisheit einzuführen",
+    "GSE": "Beobachtungen über das Gefühl des Schönen und Erhabenen",
+    "VKK": "Versuch über die Krankheiten des Kopfes",
+    "REZ_SILBERSCHLAG_2": "Recension von Silberschlags Schrift: Theorie der am 23. Juli 1762 erschienenen Feuerkugel",
+    "UD": "Untersuchung über die Deutlichkeit der Grundsätze der natürlichen Theologie und Moral",
+    "NEV": "Nachricht von der Einrichtung seiner Vorlesungen in dem Winterhalbenjahre von 1765-1766",
+    "TG": "Träume eines Geistersehers, erläutert durch Träume der Metaphysik",
+    "GUGR": "Von dem ersten Grunde des Unterschiedes der Gegenden im Raume",
+    "MSI": "De mundi sensibilis atque intelligibilis forma et principiis",
+    "REZ_MOSCATI": "Recension von Moscatis Schrift: Von dem körperlichen wesentlichen Unterschiede zwischen der Structur der Thiere und Menschen",
+    "VVRM": "Von den verschiedenen Racen der Menschen",
+    "AP": "Aufsätze, das Philanthropin betreffend",
+
+    "KRV_B": "Kritik der reinen Vernunft, 2. Aufl.",
+
+    "KRV_A": "Kritik der reinen Vernunft, 1. Aufl.",
+    "PROL": "Prolegomena",
+    "GMS": "Grundlegung zur Metaphysik der Sitten",
+    "MAN": "Metaphysische Anfangsgründe der Naturwissenschaft",
+
+    "KPV": "Kritik der praktischen Vernunft",
+    "KU": "Kritik der Urtheilskraft",
+
+    "RGV": "Die Religion innerhalb der Grenzen der bloßen Vernunft",
+    "MS": "Die Metaphysik der Sitten",
+
+    "SF": "Der Streit der Facultäten",
+    "ANTH": "Anthropologie in pragmatischer Hinsicht",
+
+    "LAMBERT_BRIEFWECHSEL": "Anzeige des Lambert''schen Briefwechsels",
+    "NACHRICHT_AERZTE": "Nachricht an Ärzte",
+    "REZ_SCHULZ": "Recension von Schulz''s Versuch einer Anleitung zur Sittenlehre für alle Menschen, ohne Unterschied der Religion, nebst einem Anhange von den Todesstrafen",
+    "IDEE_GESCHICHTE": "Idee zu einer allgemeinen Geschichte in weltbürgerlicher Absicht",
+    "FRAGE_AUFKLAERUNG": "Beantwortung der Frage: Was ist Aufklärung?",
+    "REZ_HERDER": "Recension von J. G. Herders Ideen zur Philosophie der Geschichte der Menschheit",
+    "VULKANE_MOND": "Über die Vulkane im Monde",
+    "VUB": "Von der Unrechtmäßigkeit des Büchernachdrucks",
+    "BEGRIFF_MENSCHENRACE": "Bestimmung des Begriffs einer Menschenrace",
+    "ANFANG_MENSCHENGESCHICHTE": "Muthmaßlicher Anfang der Menschengeschichte",
+    "REZ_HUFELAND": "Recension von Gottlieb Hufeland''s Versuch über den Grundsatz des Naturrechts",
+    "WDO": "Was heißt: Sich im Denken orientiren?",
+    "BEM_MORGENSTUNDEN": "Einige Bemerkungen zu L. H. Jakob''s Prüfung der Mendelssohn''schen Morgenstunden",
+    "UEGTP": "Über den Gebrauch teleologischer Principien in der Philosophie",
+    "UEE": "Über eine Entdeckung, nach der alle neue Kritik der reinen Vernunft durch eine ältere entbehrlich gemacht werden soll",
+    "MISSLINGEN_THEODICEE": "Über das Mißlingen aller philosophischen Versuche in der Theodicee",
+    "TP": "Über den Gemeinspruch: Das mag in der Theorie richtig sein, taugt aber nicht für die Praxis",
+    "MOND_WITTERUNG": "Etwas über den Einfluß des Mondes auf die Witterung",
+    "EAD": "Das Ende aller Dinge",
+    "ZEF": "Zum ewigen Frieden. Ein philosophischer Entwurf",
+    "VT": "Von einem neuerdings erhobenen vornehmen Ton in der Philosophie",
+    "AUSGLEICH_STREIT": "Ausgleichung eines auf Mißverstand beruhenden mathematischen Streits",
+    "VNAEF": "Verkündigung des nahen Abschlusses eines Tractats zum ewigen Frieden in der Philosophie",
+    "VRML": "Über ein vermeintes Recht aus Menschenliebe zu lügen",
+    "BUCHMACHEREI": "Über die Buchmacherei",
+    "VORREDE_REL_PHIL": "Vorrede zu Reinhold Bernhard Jachmanns Prüfung der Kantischen Religionsphilosophie",
+    "NACHSCHRIFT_WOERTERBUCH": "Nachschrift zu Christian Gottlieb Mielckes Littauisch-deutschem und deutsch-littauischem Wörterbuch",
+    "NACHTRAG_8": "Nachtrag (Band 8)",
+    "REZ_SILBERSCHLAG_8": "Recension von Silberschlags Schrift: Theorie der am 23. Juli 1762 erschienen Feuerkugel",
+    "ANHANG_8": "Anhang (Band 8)",
+    "REZ_ULRICH": "Kraus'' Recension von Ulrich''s Eleutheriologie",
+
+    "LOG": "Logik",
+    "PG": "Physische Geographie",
+    "PAED": "Pädagogik",
+
+    "BR_1": "Briefe 001-342",
+    "BR_2": "Briefe 343-647",
+    "BR_3": "Briefe 648-903",
+
+    "INTRO_BR": "Einleitung in die Abteilung: Kant''s Briefwechsel",
+    "REMARKS_VOL_10": "Anmerkungen zu Band 10",
+    "REMARKS_VOL_11": "Anmerkungen zu Band 11",
+    "REMARKS_VOL_12": "Anmerkungen zu Band 12",
+    "NEUER_NACHTRAG": "Neuer Nachtrag",
+    "ALLG_REGISTER": "Allgemeines Register",
+    "REGISTER_KANT": "Register zu: Kant",
+
+    "INTRO_HN": "Einleitung in die Abtheilung des handschriftlichen Nachlasses",
+    "REFL_MATH": "Reflexionen zur Mathematik, Nr. 0001-0019",
+    "REFL_PH_CH": "Reflexionen zur Physik und Chemie, Nr. 0020-0082",
+    "REFL_GEO": "Reflexionen zur physischen Geographie, Nr. 0083-0110",
+    "NACHTRAG_HN": "Berichtigungen und Nachträge zu Band 14",
+
+    "EXPL_PSYCH_EMP": "Erläuterungen zur „Psychologia empirica“ in A. G. Baumgartens „Metaphysica“, Nr. 0111-0158",
+    "REFL_ANTH": "Reflexionen zur Anthropologie, Nr. 0158a-1481",
+    "ENTWURF_ANTH": "Entwürfe zu dem Colleg über Anthropologie aus den 70er und 80er Jahren, Nr. 1482-1524",
+    "ENTWURF_OPPONENT": "Erster Anhang: Entwurf zu einer Opponenten-Rede, Nr. 1525",
+    "ANHANG_MEDIZIN": "Zweiter Anhang: Medicin, Nr. 1526-1561",
+    "NACHTRAG_15": "Berichtigungen und Nachträge zu Band 15",
+
+    "REFL_MEIER": "Reflexionen zu G. Fr. Meiers „Auszug aus der Vernunftlehre“, Nr. 1562-3488",
+    "NACHTRAG_16": "Berichtigungen und Nachträge",
+
+    "EXPL_METAPHYSICA": "Erläuterungen zu A. G. Baumgartens „Metaphysica“, Nr. 3489-3702",
+    "REFL_METAPHYSIK": "Reflexionen zur Metaphysik, Nr. 3703-4846",
+    "NACHTRAG_17": "Berichtigungen und Nachträge zu Band 17",
+
+    "REFL_METAPHYSIK_2": "Reflexionen zur Metaphysik (), Nr. 4847-6205",
+    "BEM_EBERHARD": "Bemerkungen Kants in seinem Handexemplar von Eberhards „Vorbereitung zur natürlichen Theologie“, Nr. 6206-6310",
+    "REFL_METAPHYSIK_3": "Reflexionen zur Metaphysik, Nr. 6311-6455",
+    "NACHTRAG_18": "Berichtigungen und Nachträge zu Band 18",
+
+    "EXPL_INIT_PHIL": "Erläuterungen Kants zu A. G. Baumgartens „Initia philosophiae practicae primae“, Nr. 6456–6576",
+    "REFL_ETHIK": "Reflexionen zur Moralphilosophie, Nr. 6577–7322",
+    "EXPL_ACHENWALL": "Erläuterungen Kants zu G. Achenwalls „Iuris naturalis pars posterior“, Nr. 7323–7520",
+    "REFL_JURA": "Reflexionen zur Rechtsphilosophie, Nr. 7521–8080",
+    "REFL_REL_PHIL": "Reflexionen zur Religionsphilosophie, Nr. 8081–8112",
+    "NACHTRAG_19": "Berichtigungen und Nachträge zu Band 19",
+
+    "EXPL_GSE": "Bemerkungen zu den Beobachtungen über das Gefühl des Schönen und Erhabenen",
+    "LOSE_BL_GSE": "Lose Blätter zu den Beobachtungen über das Gefühl des Schönen und Erhabenen",
+    "INTRO_KU": "Erste Einleitung in die Kritik der Urteilskraft",
+    "PREISSCHRIFT": "Preisschrift über die Fortschritte der Metaphysik",
+    "LOSE_BL_PREISSCHRIFT": "Lose Blätter zu den Fortschritten der Metaphysik",
+    "VORARBEIT_EBERHARD": "Vorarbeiten zur Schrift gegen Eberhard",
+    "REZ_EBERHARD": "Zur Rezension von Eberhards Magazin",
+    "ENTWURF_REL_PHIL": "Vorredeentwürfe zur Religionsphilosophie",
+    "EXPL_JURA": "Bemerkungen zur Rechtslehre",
+    "ANHANG_20": "Anhang zu Ban 20",
+    "INTRO_20": "Einleitung zu Band 20",
+    "EXPL_20": "Erläuterungen zu Band 20",
+
+    "OP_1": "Opus postumum, Erste Hälfte (Convolut I bis VI)",
+    "OP_2": "Opus postumum, Zweite Hälfte (Convolut VII bis XIII)",
+    "OP_ANHANG": "Index, Einleitung und Erläuterungen zu Band 21 und 22",
+
+    "FRAG_PREISFRAGE": "Fragment zur Preisfrage von 1754",
+    "ENTWURF_NATURGESCHICHTE": "Vorredeentwurf zur Allgemeinen Naturgeschichte und Theorie des Himmels",
+    "NACHTRAG_KRV": "Nachträge zur Kritik der reinen Vernunft",
+    "VA_PROL": "Vorarbeit zu den Prolegomena zu einer jeden künftigen Metaphysik",
+    "VA_KPV": "Vorarbeit zur Kritik der praktischen Vernunft",
+    "VA_GTP": "Vorarbeit zu Über den Gebrauch der teleologischer Principien in der Philosophie",
+    "VA_REZ_ULRICH": "Vorarbeit zur Ulrich-Rezension",
+    "VA_MISSLINGEN_THEODICEE": "Vorarbeit zu Über das Mißlingen aller philosophischen Versuche in der Theodicee ",
+    "VA_RGV": "Vorarbeiten zur Religion innerhalb der Grenzen der bloßen Vernunft",
+    "VA_TP": "Vorarbeiten zu Über den Gemeinspruch: Das mag in der Theorie richtig sein, taugt aber nicht für die Praxis",
+    "VA_MOND_WITTERUNG": "Vorarbeiten zu Etwas über den Einfluß des Mondes auf die Witterung",
+    "VA_EAD": "Vorarbeit zu Das Ende aller Dinge",
+    "VA_ZEF": "Vorarbeiten zu Zum Ewigen Frieden",
+    "VA_VT": "Vorarbeit zu Von einem neuerdings erhobenen vornehmen Ton in der Philosophie",
+    "VA_AUSGLEICH_STREIT": "Vorarbeiten zu Ausgleichung eines auf Mißverstand beruhenden mathematischen Streits",
+    "VA_MS_1": "Vorarbeiten zu Die Metaphysik der Sitten. Erster Teil Metaphysische Anfangsgründe der Rechtslehre",
+    "VA_MS_2": "Vorarbeiten zu Die Metaphysik der Sitten. Zweiter Teil Metaphysische Anfangsgründe der Tugendlehre",
+    "VA_SF": "Vorarbeiten zum Streit der Fakultäten",
+    "VA_JACHMANN": "Vorarbeit zu Jachmanns Prüfung der Kantischen Religionsphilosophie (Prospectus)",
+    "ERGAENZ_METAPHYSIK": "Ergänzungen zu den Fortschritten der Metaphysik",
+    "ERGAENZ_OP": "Ergänzungen zum Opus postumum",
+    "ERGAENZ_BR": "Ergänzungen zum Briefwechsel",
+    "ERGAENZ_STAMMBUCH": "Ergänzungen zu den Stammbuchblättern",
+    "ANHANG_23": "Anhang zu Band 23",
+    "INTRO_23": "Einleitung zu Band 23",
+    "EXPL_23": "Erläuterungen zu Band 23",
+    "EXPL_BR": "Erläuterungen zum Briefwechsel",
+    "VERZEICHNIS_LOSE_BL": "Verzeichnis der Losen Blätter Reickes nach ihrem Abdruck in der Akademieausgabe",
+    "BERICHTIGUNG": "Berichtigungen. Uneingereichtes"
   }
 }
