--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -16,10 +16,10 @@
     }
   },
   "STARTPAGE": {
-    "TEXT": "Diese Website wird eine Webanwendung zum Durchsuchen der Texte des Bonner Kant-Korpus bieten. Sie befindet sich derzeit in der Entwicklung."
+    "TEXT": "Diese Website wird eine Webanwendung zum Lesen und Durchsuchen der Texte des Bonner Kant-Korpus bieten. Sie befindet sich derzeit in der Entwicklung."
   },
-  "READ": {
-    "MODE_CHECKBOX_LABEL": "Zeilennummern anzeigen"
+  "NOT-FOUND": {
+    "TEXT": "Die angeforderte Seite existiert nicht."
   },
   "SEARCH": {
     "INPUT": {
@@ -33,11 +33,11 @@
       "WORKS_ADVANCED_SELECT_ALL": "Alles auswählen",
       "WORKS_ADVANCED_REMOVE_ALL": "Alles entfernen",
       "SEARCH_STRING_LABEL": "Suchbegriffe",
-      "SEARCH_STRING_INFO": "Verwenden Sie die folgenden Sonderzeichen für fortgeschrittenes Suchen: & für UND, | für ODER, ! für NICHT, (...) zum Gruppieren von Begriffen und \"...\" für genaue Phrasen. Beispiel: !Katze & (Hund | \"weiße Mäuse\")",
+      "SEARCH_STRING_TOOLTIP": "Verwenden Sie die folgenden Sonderzeichen für die Expertensuche: & für UND, | für ODER, ! für NICHT, (...) zum Gruppieren von Begriffen und \"...\" für genaue Phrasen. Beispiel: (Hund | \"weiße Mäuse\") & !Katze",
       "SEARCH_STRING_PLACEHOLDER": "Suchbegriffe eingeben",
       "ADVANCED_OPTIONS_HEADER": "Erweiterte Optionen",
       "SCOPE_LABEL": "Suchbereich",
-      "SCOPE_INFO": "Suchbereich: 'Absatz' berücksichtigt Ihre Suchkriterien im gesamten Absatz, während 'Satz' die Kriterien auf einzelne Sätze einschränkt.",
+      "SCOPE_TOOLTIP": "Suchbereich: 'Absatz' berücksichtigt Ihre Suchkriterien im gesamten Absatz, während 'Satz' die Kriterien auf einzelne Sätze einschränkt.",
       "SCOPE_OPTIONS": {
         "PARAGRAPH": "Absatz",
         "SENTENCE": "Satz"
@@ -92,29 +92,29 @@
     "SEC_3": "Abteilung III: Handschriftlicher Nachlass"
   },
   "VOLUMES": {
-    "VOL_1": "Vorkritische Schriften I: 1747-1756",
-    "VOL_2": "Vorkritische Schriften II: 1757-1777",
-    "VOL_3": "Kritik der reinen Vernunft (2. Aufl., 1787)",
-    "VOL_4": "Kritik der reinen Vernunft (1. Aufl., 1781), Prolegomena, Grundlegung zur Metaphysik der Sitten, Metaphysische Anfangsgründe der Naturwissenschaft",
-    "VOL_5": "Kritik der praktischen Vernunft, Kritik der Urteilskraft",
-    "VOL_6": "Die Religion innerhalb der Grenzen der blossen Vernunft, Die Metaphysik der Sitten",
-    "VOL_7": "Der Streit der Fakultäten, Anthropologie in pragmatischer Hinsicht",
-    "VOL_8": "Abhandlungen nach 1781",
-    "VOL_9": "Logik. Physische Geographie, Pädagogik",
-    "VOL_10": "Briefe, 1747-1788 (2. Aufl)",
-    "VOL_11": "Briefe, 1789-1794 (2. Aufl.)",
-    "VOL_12": "Briefe, 1795-1803, Anhang (2. Aufl.)",
-    "VOL_13": "Anmerkungen und Register",
-    "VOL_14": "Mathematik, Physik und Chemie, Physische Geographie",
-    "VOL_15": "Anthropologie",
-    "VOL_16": "Logik",
-    "VOL_17": "Metaphysik, 1. Theil",
-    "VOL_18": "Metaphysik, 2. Theil",
-    "VOL_19": "Moralphilosophie, Rechtsphilosophie und Religionsphilosophie",
-    "VOL_20": "Vorarbeiten und Nachträge, Einleitung und Erläuterungen",
-    "VOL_21": "Opus postumum (Convolut I bis VI)",
-    "VOL_22": "Opus postumum (Convolut VII bis XIII)",
-    "VOL_23": "Vorarbeiten und Nachträge, Einleitung und Erläuterungen"
+    "VOL_1": "Band I: Vorkritische Schriften I: 1747-1756",
+    "VOL_2": "Band II: orkritische Schriften II: 1757-1777",
+    "VOL_3": "Band III: Kritik der reinen Vernunft (2. Aufl., 1787)",
+    "VOL_4": "Band IV: Kritik der reinen Vernunft (1. Aufl., 1781), Prolegomena, Grundlegung zur Metaphysik der Sitten, Metaphysische Anfangsgründe der Naturwissenschaft",
+    "VOL_5": "Band V: Kritik der praktischen Vernunft, Kritik der Urteilskraft",
+    "VOL_6": "Band VI: Die Religion innerhalb der Grenzen der blossen Vernunft, Die Metaphysik der Sitten",
+    "VOL_7": "Band VII: Der Streit der Fakultäten, Anthropologie in pragmatischer Hinsicht",
+    "VOL_8": "Band VIII: Abhandlungen nach 1781",
+    "VOL_9": "Band IX: Logik. Physische Geographie, Pädagogik",
+    "VOL_10": "Band X: Briefe, 1747-1788 (2. Aufl)",
+    "VOL_11": "Band XI: Briefe, 1789-1794 (2. Aufl.)",
+    "VOL_12": "Band XII: Briefe, 1795-1803, Anhang (2. Aufl.)",
+    "VOL_13": "Band XIII: Anmerkungen und Register",
+    "VOL_14": "Band XIV: Mathematik, Physik und Chemie, Physische Geographie",
+    "VOL_15": "Band XV: Anthropologie",
+    "VOL_16": "Band XVI: Logik",
+    "VOL_17": "Band XVII: Metaphysik, 1. Theil",
+    "VOL_18": "Band XVIII: Metaphysik, 2. Theil",
+    "VOL_19": "Band XIX: Moralphilosophie, Rechtsphilosophie und Religionsphilosophie",
+    "VOL_20": "Band XX: Vorarbeiten und Nachträge, Einleitung und Erläuterungen",
+    "VOL_21": "Band XXI: Opus postumum (Convolut I bis VI)",
+    "VOL_22": "Band XXII: Opus postumum (Convolut VII bis XIII)",
+    "VOL_23": "Band XXIII: Vorarbeiten und Nachträge, Einleitung und Erläuterungen"
   },
   "WORKS": {
     "GSK": "Gedanken von der wahren Schätzung der lebendigen Kräfte und Beurtheilung der Beweise, deren sich Herr von Leibniz und andere Mechaniker in dieser Streitsache bedient haben, nebst einigen vorhergehenden Betrachtungen, welche die Kraft der Körper überhaupt betreffen",
