--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -13,10 +13,10 @@
     }
   },
   "STARTPAGE": {
-    "TEXT": "This website will offer a web application for reading and searching the texts of the Bonn Kant Corpus. It is currently under development, and at the moment only some texts are available."
+    "TEXT": "This website will offer a web application for reading and searching the texts of the Bonn Kant Corpus. It is currently under development."
   },
-  "READ": {
-    "MODE_CHECKBOX_LABEL": "Show line numbers"
+  "NOT-FOUND": {
+    "TEXT": "The requested page does not exist."
   },
   "SEARCH": {
     "INPUT": {
@@ -30,11 +30,11 @@
       "WORKS_ADVANCED_SELECT_ALL": "Select all",
       "WORKS_ADVANCED_REMOVE_ALL": "Remove all",
       "SEARCH_STRING_LABEL": "Search terms",
-      "SEARCH_STRING_INFO": "Use special characters for advanced searches: & for AND, | for OR, ! for NOT, (...) to group terms, and \"...\" for exact phrases. Example: !cat & (dog | \"white mice\")",
+      "SEARCH_STRING_TOOLTIP": "Use special characters for specialized searches: & for AND, | for OR, ! for NOT, (...) to group terms, and \"...\" for exact phrases. Example: (dog | \"white mice\") & !cat",
       "SEARCH_STRING_PLACEHOLDER": "Search terms",
       "ADVANCED_OPTIONS_HEADER": "Advanced options",
       "SCOPE_LABEL": "Search scope",
-      "SCOPE_INFO": "Search scope: 'Paragraph' will consider your search criteria within the entire paragraph, while 'Sentence' will narrow the criteria to individual sentences.",
+      "SCOPE_TOOLTIP": "Search scope: 'Paragraph' will consider your search criteria within the entire paragraph, while 'Sentence' will narrow the criteria to individual sentences.",
       "SCOPE_OPTIONS": {
         "PARAGRAPH": "Paragraph",
         "SENTENCE": "Sentence"
@@ -89,28 +89,28 @@
     "SEC_3": "Section 3: Handwritten Legacy"
   },
   "VOLUMES": {
-    "VOL_1": "Pre-Critical Writings I, 1747-1756",
-    "VOL_2": "Pre-Critical Writings II, 1757-1777",
-    "VOL_3": "Critique of Pure Reason (B-ed. 1787)",
-    "VOL_4": "Critique of Pure Reason (A-ed.)/Prolegomena/etc.",
-    "VOL_5": "Critique of Practical Reason/Critique of Judgment",
-    "VOL_6": "Religion/Metaphysics of Morals",
-    "VOL_7": "Conflict of the Faculties/Anthropology",
-    "VOL_8": "Essays after 1781",
-    "VOL_9": "Logic/Physical Geography/Education",
-    "VOL_10": "Correspondence, 1747-1788",
-    "VOL_11": "Correspondence, 1789-1794",
-    "VOL_12": "Correspondence, 1795-1803 + varia",
-    "VOL_13": "Correspondence Index",
-    "VOL_14": "Natural Sciences Nachlaß",
-    "VOL_15": "Anthropology Nachlaß",
-    "VOL_16": "Logic Nachlaß",
-    "VOL_17": "Metaphysics Nachlaß I",
-    "VOL_18": "Metaphysics Nachlaß II",
-    "VOL_19": "Moral Philosophy, Philosophy of Law, and Philosophy of Religion Nachlaß",
-    "VOL_20": "Drafts and Revisions",
-    "VOL_21": "Opus postumum I",
-    "VOL_22": "Opus postumum II",
-    "VOL_23": "Drafts and Revisions"
+    "VOL_1": "Volume I:Pre-Critical Writings I, 1747-1756",
+    "VOL_2": "Volume II:Pre-Critical Writings II, 1757-1777",
+    "VOL_3": "Volume III:Critique of Pure Reason (B-ed. 1787)",
+    "VOL_4": "Volume IV:Critique of Pure Reason (A-ed.)/Prolegomena/etc.",
+    "VOL_5": "Volume V:Critique of Practical Reason/Critique of Judgment",
+    "VOL_6": "Volume VI:Religion/Metaphysics of Morals",
+    "VOL_7": "Volume VII:Conflict of the Faculties/Anthropology",
+    "VOL_8": "Volume VIII:Essays after 1781",
+    "VOL_9": "Volume IX:Logic/Physical Geography/Education",
+    "VOL_10": "Volume X:Correspondence, 1747-1788",
+    "VOL_11": "Volume XI:Correspondence, 1789-1794",
+    "VOL_12": "Volume XII:Correspondence, 1795-1803 + varia",
+    "VOL_13": "Volume XIII:Correspondence Index",
+    "VOL_14": "Volume XIV:Natural Sciences Nachlaß",
+    "VOL_15": "Volume XV:Anthropology Nachlaß",
+    "VOL_16": "Volume XVI:Logic Nachlaß",
+    "VOL_17": "Volume XVII:Metaphysics Nachlaß I",
+    "VOL_18": "Volume XVIII:Metaphysics Nachlaß II",
+    "VOL_19": "Volume XIX:Moral Philosophy, Philosophy of Law, and Philosophy of Religion Nachlaß",
+    "VOL_20": "Volume XX:Drafts and Revisions",
+    "VOL_21": "Volume XXI:Opus postumum I",
+    "VOL_22": "Volume XXII:Opus postumum II",
+    "VOL_23": "Volume XXIII:Drafts and Revisions"
   }
 }
