fix: adjust startpage text

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -16,7 +16,7 @@
     }
   },
   "STARTPAGE": {
-    "TEXT": "Diese Website wird eine Webanwendung zum Lesen und Durchsuchen der Texte des Bonner Kant-Korpus bieten. Sie befindet sich derzeit in der Entwicklung."
+    "TEXT": "Diese Website soll eine Webanwendung zum Lesen und Durchsuchen der Texte des Bonner Kant-Korpus werden. Sie befindet sich derzeit in der Entwicklung."
   },
   "NOT-FOUND": {
     "TEXT": "Die angeforderte Seite existiert nicht."
