add volume number to volume title

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -23,6 +23,10 @@
     "TEXT": "Die angeforderte Seite existiert nicht."
   },
 
+  "READ": {
+    "VOLUME": "Band"
+  },
+
   "SEARCH": {
     "INPUT": {
       "WORKS_BASIC_LABEL": "Werkauswahl",
