--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -20,6 +20,10 @@
     "TEXT": "The requested page does not exist."
   },
 
+  "READ": {
+    "VOLUME": "Volume"
+  },
+
   "SEARCH": {
     "INPUT": {
       "WORKS_BASIC_LABEL": "Select works",
