--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -2,6 +2,7 @@
   "COMMON": {
     "SCROLL_TOP_TOOLTIP": "Nach oben",
     "ANCHOR_BUTTON_TOOLTIP": "Erstelle Link zu diesem Element",
+    "VOLUME": "Band",
     "SECTION_1": "Abschnitt 1: Werke",
     "SECTION_2": "Abschnitt 2: Briefe",
     "SECTION_3": "Abschnitt 3: Handschriftlicher Nachlass"
