improve text toc component

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -24,6 +24,14 @@
     "TEXT": "Die angeforderte Seite existiert nicht."
   },
 
+  "READ": {
+    "TOC": {
+      "TITLE": "Inhaltsverzeichnis",
+      "PAGE_REF": "S. {{page}}"
+    },
+    "CONTENT": "Text"
+  },
+
   "SEARCH": {
     "INPUT": {
       "TERMS": {
